# monkey

./: .gitignore  Cargo.toml  README.md  README.org  flake.nix
src/: lib.rs  main.rs  token.rs
src/cli/: mod.rs
src/lexer/: mod.rs  token.rs  word_iter.rs
src/parser/: ast.rs  expr.rs  identifier.rs  mod.rs  parser.rs  program.rs
src/repl/: mod.rs
