[package]
name = "monkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
rustyline = "10"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
